expose transform cache to python, and fix up copyright notices

--- a/lib/usd/utils/CMakeLists.txt
+++ b/lib/usd/utils/CMakeLists.txt
@@ -118,6 +118,7 @@ endforeach()
 list(APPEND mayausdutils_python_source
   module.cpp
   wrapMayaTransformAPI.cpp
+  wrapTransformCache.cpp
   wrapTransformEvaluator.cpp
   wrapTransformManipulator.cpp
 )
